ana-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ana-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ana-test.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ana-test
                port:
                  number: 8080
